--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "dev": "vue-cli-service serve --mode development",
+    "staging": "vue-cli-service build --mode development",
+    "build": "vue-cli-service build --mode production",
+    "prepare": "husky install",
+    "lint": "eslint --ext .js,.vue src --cache",
+    "lint-fix": "eslint --ext .js,.vue src --cache --fix"
   },
   "dependencies": {
     "core-js": "^3.8.3",
@@ -23,26 +26,20 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-vue": "^8.0.3",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.2",
+    "prettier": "^2.8.8",
     "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
     "vue-cli-plugin-vuetify": "~2.5.8",
     "vue-template-compiler": "^2.6.14",
     "vuetify-loader": "^1.7.0"
   },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "@babel/eslint-parser"
-    },
-    "rules": {}
+  "lint-staged": {
+    "*.{js,vue}": "eslint --ext .js,.vue src --cache --fix",
+    "*.{js,css,md,vue}": "prettier --write"
   },
   "browserslist": [
     "> 1%",
